Updated to Angular 9

--- a/angular.json
+++ b/angular.json
@@ -121,6 +121,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "first-app"
+    }
+  },
+  "defaultProject": "first-app",
+  "cli": {
+    "analytics": false
+  }
 }
